# Monarch-Butterfly

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
benches/: comparison.rs
crates/benches/: Cargo.toml  gen_benches.py  generate_benchmark_plot.py
crates/benches/benches/: comparison.rs
crates/monarch-derive/: Cargo.toml
crates/monarch-derive/src/: lib.rs
src/: lib.rs  mixed.rs
tests/: forward.rs  inverse.rs  test.rs
