[package]
name = "monarch-butterfly"
version = "0.4.0"
edition = "2021"
description = "Proc-Macro unrolled FFTs"
license = "MIT"
documentation = "https://docs.rs/monarch-butterfly"
homepage = "https://github.com/michaelciraci/Monarch-Butterfly"
repository = "https://github.com/michaelciraci/Monarch-Butterfly"
rust-version = "1.63"
keywords = ["fft", "dft", "discrete", "fourier", "no_std"]
categories = ["algorithms", "science"]

[dependencies]
monarch-derive = "=0.4.0"
num-complex = "0.4"
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
rustfft = "6.2.0"
