[package]
name = "monarch-butterfly"
version = "0.4.1"
edition = "2021"
description = "Proc-Macro unrolled FFTs"
license = "MIT"
documentation = "https://docs.rs/monarch-butterfly"
homepage = "https://github.com/michaelciraci/Monarch-Butterfly"
repository = "https://github.com/michaelciraci/Monarch-Butterfly"
rust-version = "1.63"
keywords = ["fft", "dft", "discrete", "fourier", "no_std"]
categories = ["algorithms", "science"]
exclude = ["assets/", ".*"]

[dependencies]
monarch-derive = { path = "crates/monarch-derive" }
num-complex = { version = "0.4", default-features = false, features = ["libm"] }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }

[dev-dependencies]
rustfft = "6.2.0"
