[package]
name = "monarch-derive"
version = "0.3.0"
edition = "2021"
description = "Proc-Macro unrolled FFTs"
license = "MIT"
documentation = "https://docs.rs/monarch-derive"
homepage = "https://github.com/michaelciraci/Monarch-Butterfly/tree/main/crates/monarch-derive"
repository = "https://github.com/michaelciraci/Monarch-Butterfly/tree/main/crates/monarch-derive"
rust-version = "1.61"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = "2.0.100"
num-complex = "0.4"
num-traits = "0.2"
num-integer = "0.1"
