[package]
name = "monarch-derive"
version = "0.4.1"
edition = "2021"
description = "Proc-Macro unrolled FFTs"
license = "MIT"
documentation = "https://docs.rs/monarch-derive"
homepage = "https://github.com/michaelciraci/Monarch-Butterfly/tree/main/crates/monarch-derive"
repository = "https://github.com/michaelciraci/Monarch-Butterfly/tree/main/crates/monarch-derive"
rust-version = "1.61"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = "2.0.100"
num-complex = { version = "0.4", default-features = false, features = ["libm"] }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
num-integer = "0.1"
